# OOP_labs

laba_1/: CMakeLists.txt  func.c++  header_test.h  test.c++  tests.c++
laba_2/: CMakeLists.txt  Five.c++  Five.h  a.out  main.c++  test_five.c++
laba_3/: CMakeLists.txt  Figures.cpp  Figures.h  main.cpp  tests.cpp
laba_5/: CMakeLists.txt  a.out  custom_memory_resource.cpp  custom_memory_resource.h  main.cpp  tests.cpp
laba_6/: CMakeLists.txt  dungeon.txt  essential_tests.cpp  log.txt  main.c
